<resources>
    <string name="app_name">WeAsOne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="or_login_using_your">or Login Using your</string>
    <string name="phone_number">Phone Number</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create Group</string>
    <string name="user_name">user name</string>
    <string name="user_status">user status</string>
    <string name="send_message">Send Message</string>
    <string name="cancelchatreq">Cancel Chat Request</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="type_message">type message here...</string>
    <string name="email_id">Email-ID</string>
    <string name="Password">Password</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="app_logo">Logo of the App</string>
    <string name="sign_up">New User? Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="send_code">Send Code</string>
    <string name="profile_name">Profile Name</string>
    <string name="update_bio">Update Bio</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registered_login">Already Registered? Login</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

</resources>