<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_light" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayoutRegisterUI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_id"
        android:padding="5dp"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputFieldRegisterUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayoutRegisterUI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInputLayoutRegisterUI"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Password"
        android:padding="5dp"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputFieldRegisterUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayoutRegisterUI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordInputLayoutRegisterUI"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirm_password"
        android:padding="5dp"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInputFieldRegisterUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordInputLayoutRegisterUI"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/registeredLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/registered_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


</RelativeLayout>