<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email_id"
                android:padding="5dp"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailInputLayout"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/Password"
                android:padding="5dp"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInputLayout"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPasswordField"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/loginPartition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUpText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Or"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

            <Button
                android:id="@+id/loginPhoneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginPartition"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login_with_phone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:icon="@drawable/phone" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>