<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.PhoneLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoPhoneUI"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_light" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoPhoneUI"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/mobile_number"
            android:padding="5dp"
            app:startIconDrawable="@drawable/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNoInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeInputLayout"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileNoInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="Code"
            android:padding="5dp"
            app:startIconDrawable="@drawable/otp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sendCodeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeInputLayout"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textSize="18sp" />


        <Button
            android:id="@+id/codeVerifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sendCodeButton"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/verify_code"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>